--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -24,5 +24,5 @@
   height: 756px;
   overflow-y: auto;
   -webkit-scrollbar-width: 8px;
-  -webkit-scrollbar-color: #4C4CFF;
+  -webkit-scrollbar-color: #4c4cff;
 }
