--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,4 +1,4 @@
-.section {
+.popup {
   background-color: #1C1C21;
   border: 1px solid rgba(76, 76, 255, 0.2);
   box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.04), 0px 16px 24px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
@@ -15,6 +15,6 @@
   border: none;
   cursor: pointer;
   position: absolute;
-  right: 40px;;
+  right: 40px;
   top: 60px;
 }
