--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -13,7 +13,7 @@
   flex-direction: row;
   gap: 40px;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   padding-right: 16px;
 }
 
