--- a/src/components/modal-overlay/modal-overlay.module.css
+++ b/src/components/modal-overlay/modal-overlay.module.css
@@ -8,6 +8,11 @@
   background-color: rgba(0, 0, 0, 0.6);
   justify-content: center;
   align-items: center;
-  asvisibility: hidden;
-  aopacity: 0;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.popup.opened {
+  opacity: 1;
+  visibility: visible;
 }
