--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -24,14 +24,27 @@
   align-items: center;
 }
 
-.scroll {
-  height: 340px;
-  overflow-y: auto;
-}
-
 .cell {
   display: flex;
   flex-direction: row;
-  gap: 32px;
+  gap: 8px;
   align-items: center;
+}
+
+.scroll {
+  height: 464px;
+  overflow-y: scroll;
+}
+
+.scroll::-webkit-scrollbar {
+  width: 8px;
+
+  background: #2F2F37;
+
+}
+
+.scroll::-webkit-scrollbar-thumb {
+
+  background: #8585AD;
+  border: 3px solid #8585AD;
 }
