--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -26,8 +26,19 @@
 }
 
 .scroll {
-  height: 756px;
-  overflow-y: auto;
-  -webkit-scrollbar-width: 8px;
-  -webkit-scrollbar-color: #4c4cff;
+  height: 650px;
+  overflow-y: scroll;
+}
+
+.scroll::-webkit-scrollbar {
+  width: 8px;
+
+  background: #2F2F37;
+
+}
+
+.scroll::-webkit-scrollbar-thumb {
+
+  background: #8585AD;
+  border: 3px solid #8585AD;
 }
