add navlink menu to header with styles

--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -16,6 +16,15 @@
   gap: 8px;
 }
 
+.link {
+  color: #8585AD;
+  text-decoration: none;
+}
+
+.active {
+  color: #F2F2F3;
+}
+
 .rightnav {
   justify-self: end;
 }
