--- a/src/components/ingredient-image-round-border/ingredient-image-round-border.module.css
+++ b/src/components/ingredient-image-round-border/ingredient-image-round-border.module.css
@@ -2,6 +2,8 @@
   position: relative;
   width: 64px;
   height: 64px;
+  border-radius: 50%;
+  background-color: #1c1c21;
 }
 
 .image {
@@ -11,7 +13,7 @@
   width: 112px;
 }
 
-.ingredientIcon::before {
+.ingredientIcon::after {
   content: "";
   position: absolute;
   inset: 0;
@@ -23,4 +25,46 @@
     linear-gradient(#1c1c21 0 0);
   mask-composite: exclude;
   -webkit-mask-composite: xor;
+}
+
+.shading {
+  position: absolute;
+  top: 0;bottom: 0;
+  left: 0; right: 0;
+  border-radius: inherit;
+  background-color: #1c1c21;
+  opacity: 0.6;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.counter {
+  text-align: center;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+/* TODO переделать имена классов*/
+.zIndex0 {
+  z-index: 6;
+}
+
+.zIndex1 {
+  z-index: 5;
+}
+
+.zIndex2 {
+  z-index: 4;
+}
+
+.zIndex3 {
+  z-index: 3;
+}
+
+.zIndex4 {
+  z-index: 2;
+}
+
+.zIndex5 {
+  z-index: 1;
 }
