--- a/src/components/order-stats/order-stats.module.css
+++ b/src/components/order-stats/order-stats.module.css
@@ -12,9 +12,10 @@
 
 .orderNumber {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(5, 24px);
-  grid-auto-flow: row;
+  grid-auto-rows: 24px;
+  /* grid-auto-flow: row; */
 }
 
 .orderNumberDone {
