--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -17,12 +17,12 @@
 }
 
 .link {
-  color: #8585AD;
+  color: #8585ad;
   text-decoration: none;
 }
 
 .active {
-  color: #F2F2F3;
+  color: #f2f2f3;
 }
 
 .rightnav {
