--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -40,10 +40,10 @@
 
 .scroll::-webkit-scrollbar {
   width: 8px;
-  background: #2F2F37;
+  background: #2f2f37;
 }
 
 .scroll::-webkit-scrollbar-thumb {
-  background: #8585AD;
-  border: 3px solid #8585AD;
+  background: #8585ad;
+  border: 3px solid #8585ad;
 }
