--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -33,15 +33,15 @@
 
 .scroll::-webkit-scrollbar {
   width: 8px;
-  background: #2F2F37;
+  background: #2f2f37;
 }
 
 .scroll::-webkit-scrollbar-thumb {
-  background: #8585AD;
-  border: 3px solid #8585AD;
+  background: #8585ad;
+  border: 3px solid #8585ad;
 }
 
 .link {
   text-decoration: none;
-  color: #F2F2F3;
+  color: #f2f2f3;
 }
