--- a/src/pages/login.module.css
+++ b/src/pages/login.module.css
@@ -17,11 +17,11 @@
   display: flex;
   flex-direction: column;
   row-gap: 16px;
-  color: #8585AD;
+  color: #8585ad;
   align-items: center;
 }
 
 .link {
-  color: #4C4CFF;
+  color: #4c4cff;
   text-decoration: none;
 }
